# Tunebook

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  formatted-top-up-neuron.json  identity.pem  increase-delay.json  neurons.json  package-lock.json  package.json  sns_init.yaml  sns_proposal_summary.md  stake-neuron.json  start-dissolving.json  top-up-neuron.json  top-upNeuron.json
.dfx/ic/canisters/TuneBook_backend/: TuneBook_backend.wasm  constructor.did  constructor.old.did  service.did  service.did.d.ts  service.did.js
.dfx/ic/lsp/: 6owwo-2yaaa-aaaam-qbelq-cai.did
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/TuneBook_backend/: TuneBook_backend.wasm  constructor.did  index.js  service.did.d.ts
.dfx/local/canisters/TuneBook_frontend/: index.js
src/: .ic-assets.json5
src/TuneBook_backend/: Cargo.toml  TuneBook_backend.did
src/TuneBook_backend/src/: lib.rs  tune_db.json  tunes_output.json  types.rs  utils.rs
src/TuneBook_frontend/: .ic-assets.json5  index.html  package.json
src/TuneBook_frontend/public/: .ic-assets.json5
src/TuneBook_frontend/public/.well-known/: ic-domains
src/TuneBook_frontend/src/: App.jsx  actor.jsx  index.scss
src/TuneBook_frontend/src/components/: AbcPlayer.jsx  AboutUs.jsx  ContactUs.jsx  Controls.jsx  Faq.jsx  Feedback.jsx  Footer.jsx  Forums.jsx  Friends.jsx  ImageCarousel.jsx  InstrumentPreview.jsx  LoadingSpinner.jsx  Login.jsx  LoginOptions.jsx  Marketplace.jsx  MyProfile.jsx  PrivacyPolicy.jsx  Profile.jsx  Request.jsx  SessionDetail.jsx  Tunes.jsx  (+5 more)
vite-project/: package-lock.json
