[package]
name = "TuneBook_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
serde = "1.0.132"
serde_json = "1.0"
ic-cdk-timers = "0.10" 
ic-stable-structures = "0.6.5"
regex = "1"
base64 = "0.21"
